// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`canonical score integrity > basic resilient site retains its certificate signature 1`] = `
{
  "achievementIds": [
    "first_build",
  ],
  "breakdown": {
    "cooling": 72,
    "efficiency": 72,
    "power": 84,
    "redundancy": 58,
    "safety": 40,
    "security": 20,
  },
  "certifiable": false,
  "issueRuleIds": [
    "UPTIME.002.cooling_present",
    "COOL.001.heat_load",
    "NFPA.001.vesda_coverage",
    "NFPA.002.epo_reachable",
    "NFPA.004.clean_agent",
    "ESG.002.heat_recovery",
    "SEC.005.recovery_immutable",
    "PRIV.001.encryption",
    "COOL.003.redundant",
    "POWER.002.it_has_pdu",
    "POWER.003.it_has_network",
    "ESG.003.renewable",
    "SEC.001.preventive_mantrap",
    "SEC.002.preventive_mfa",
    "SEC.003.detective_siem",
    "SEC.006.deterrence_physical",
    "UPTIME.006.tier_iv_2n",
    "SEC.004.corrective_auto_isolate",
    "SEC.007.deterrence_logical",
    "SEC.008.deterrence_admin",
    "PRIV.003.dpia",
  ],
  "level": "Bronze",
  "pue": 1.4,
  "rulePackVersion": "0.1.0",
  "score": 59,
  "tier": "II",
  "wue": 0,
}
`;

exports[`canonical score integrity > efficient edge site retains its certificate signature 1`] = `
{
  "achievementIds": [
    "first_build",
    "deterrence_max",
    "zero_trust",
    "perim_locked",
    "defense_in_depth",
  ],
  "breakdown": {
    "cooling": 72,
    "efficiency": 92,
    "power": 84,
    "redundancy": 50,
    "safety": 60,
    "security": 100,
  },
  "certifiable": true,
  "issueRuleIds": [
    "UPTIME.002.cooling_present",
    "COOL.001.heat_load",
    "NFPA.002.epo_reachable",
    "NFPA.004.clean_agent",
    "UPTIME.005.dual_utility",
    "COOL.003.redundant",
    "POWER.002.it_has_pdu",
    "POWER.003.it_has_network",
    "ESG.003.renewable",
    "UPTIME.006.tier_iv_2n",
  ],
  "level": "Gold",
  "pue": 1.4,
  "rulePackVersion": "0.1.0",
  "score": 75,
  "tier": "II",
  "wue": 0,
}
`;

exports[`canonical score integrity > empty retains its certificate signature 1`] = `
{
  "achievementIds": [],
  "breakdown": {
    "cooling": 100,
    "efficiency": 100,
    "power": 100,
    "redundancy": 0,
    "safety": 100,
    "security": 42,
  },
  "certifiable": false,
  "issueRuleIds": [
    "UPTIME.001.utility_present",
    "UPTIME.002.cooling_present",
    "UPTIME.003.ups_present",
    "UPTIME.004.generator_present",
    "SEC.005.recovery_immutable",
    "UPTIME.005.dual_utility",
    "SEC.001.preventive_mantrap",
    "SEC.002.preventive_mfa",
    "SEC.003.detective_siem",
    "SEC.006.deterrence_physical",
    "UPTIME.006.tier_iv_2n",
    "SEC.004.corrective_auto_isolate",
    "SEC.007.deterrence_logical",
    "SEC.008.deterrence_admin",
  ],
  "level": "Silver",
  "pue": 0,
  "rulePackVersion": "0.1.0",
  "score": 71,
  "tier": "F",
  "wue": 0,
}
`;

exports[`canonical score integrity > secured site retains its certificate signature 1`] = `
{
  "achievementIds": [
    "first_build",
    "deterrence_max",
    "zero_trust",
    "perim_locked",
    "defense_in_depth",
  ],
  "breakdown": {
    "cooling": 72,
    "efficiency": 92,
    "power": 84,
    "redundancy": 50,
    "safety": 40,
    "security": 100,
  },
  "certifiable": true,
  "issueRuleIds": [
    "UPTIME.002.cooling_present",
    "COOL.001.heat_load",
    "NFPA.001.vesda_coverage",
    "NFPA.002.epo_reachable",
    "NFPA.004.clean_agent",
    "UPTIME.005.dual_utility",
    "COOL.003.redundant",
    "POWER.002.it_has_pdu",
    "POWER.003.it_has_network",
    "ESG.003.renewable",
    "UPTIME.006.tier_iv_2n",
  ],
  "level": "Silver",
  "pue": 1.4,
  "rulePackVersion": "0.1.0",
  "score": 72,
  "tier": "II",
  "wue": 0,
}
`;

exports[`canonical score integrity > single rack retains its certificate signature 1`] = `
{
  "achievementIds": [],
  "breakdown": {
    "cooling": 72,
    "efficiency": 92,
    "power": 84,
    "redundancy": 0,
    "safety": 40,
    "security": 20,
  },
  "certifiable": false,
  "issueRuleIds": [
    "UPTIME.001.utility_present",
    "UPTIME.002.cooling_present",
    "UPTIME.003.ups_present",
    "UPTIME.004.generator_present",
    "COOL.001.heat_load",
    "NFPA.001.vesda_coverage",
    "NFPA.002.epo_reachable",
    "NFPA.004.clean_agent",
    "SEC.005.recovery_immutable",
    "PRIV.001.encryption",
    "UPTIME.005.dual_utility",
    "COOL.003.redundant",
    "POWER.002.it_has_pdu",
    "POWER.003.it_has_network",
    "ESG.003.renewable",
    "SEC.001.preventive_mantrap",
    "SEC.002.preventive_mfa",
    "SEC.003.detective_siem",
    "SEC.006.deterrence_physical",
    "UPTIME.006.tier_iv_2n",
    "SEC.004.corrective_auto_isolate",
    "SEC.007.deterrence_logical",
    "SEC.008.deterrence_admin",
    "PRIV.003.dpia",
  ],
  "level": "Bronze",
  "pue": 1.4,
  "rulePackVersion": "0.1.0",
  "score": 50,
  "tier": "F",
  "wue": 0,
}
`;
